--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>Hello World !</title>
     <meta name="description" content="">
   </head>
 <body>
