--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="description" content="">
   </head>
 <body>
-  <h1>About us</h1>
+  <h1>About us
+  </h1>
+    <h2>Our history
+    </h2> 
 </body>
 </html>
